# kimari-local-ai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  GOVERNANCE.md  Home.md  LICENSE  MAINTAINERS.md  MANIFEST.in  MODEL_CARD.md  MODEL_LICENSES.md  Makefile  PRIVACY.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SUPPORT.md  install.ps1  install.sh  next.config.ts  pyproject.toml  requirements-dev.txt  worklog.md
.github/: CODEOWNERS  pull_request_template.md
agent-ctx/: 2-8-sub-agent.md  9-11-main-agent.md
benchmarks/: README.md  RESULT_FORMAT.md  SCHEMA.md
cli/: kimari_cli.py
config/: kimari.models.json  kimari.profiles.json  kimari.profiles.schema.json
dataset/: README.md
docker/: docker-compose.open-webui.yml
docs/: 00-01_product_vision.md  00-02_kimarifit_formula.md  00-03_architecture.md  00-04_local_runtime.md  00-05_cli_spec.md  00-06_web_pwa_desktop.md  00-07_ide_integration.md  00-08_dataset_tuning.md  00-09_security_governance.md  00-10_service_status.md  00-11_tech_stack_compatibility.md  11_NEXT_RUNTIME_VALIDATION.md  ADAPTER_ARTIFACT_POLICY.md  ADAPTER_PREVIEW_GATE.md  API_EXPERIMENTAL.md  API_OPENAPI_DRAFT.yaml  API_PLAN.md  BASELINE_EVAL_PLAN.md  BASELINE_VS_ADAPTER_EVAL_PLAN.md  BASE_MODEL_ACCEPTANCE.md  BENCHMARK_SUBMISSIONS.md  BRAND_ASSETS_PLAN.md  CLI_REFERENCE.md  COLLECTION_SEED_PLAN.md  COMPARISON.md  CONSOLE_UX.md  CONTINUE_LOCAL_SETUP.md  CPU_INFERENCE_VALIDATION_V0186.md  CUDA_INFERENCE_VALIDATION_V0187.md  DOCTOR_DEEP.md  ENVIRONMENT_STATUS.md  FIRST_PRIVATE_SFT_HANDOFF.md  FIRST_PRIVATE_SFT_RECORD.md  FIRST_PRIVATE_TRAINING_RUN.md  FIRST_TRAINING_RUN.md  GATEWAY_DASHBOARD.md  GATEWAY_DASHBOARD_CLI.md  GATEWAY_PLAN.md  GATEWAY_PROTOTYPE_PLAN.md  GTX1060_LOCAL_RUNTIME_RESULT.md  (+114 more)
eval/: README.md  expected_behaviors.md  failure_modes.md  kimarifit.py  (+3 more)
(+512 files in other folders)
