[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kimari-local-ai"
version = "0.1.55-alpha"
description = "Open-source framework for running local LLMs on consumer NVIDIA GPUs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Smouj", email = "smouj013@users.noreply.github.com"},
]
keywords = ["ai", "llm", "local-ai", "local-llm", "llama-cpp", "gguf", "cuda", "nvidia", "openai-compatible-api", "open-webui", "consumer-gpu", "quantization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: GPU :: NVIDIA CUDA",
]
dependencies = [
    "requests>=2.31.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "jsonschema>=4.0.0",
    "PyYAML>=6.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
kimari = "kimari.cli.main:main"

[tool.setuptools.packages.find]
include = ["kimari*"]

[tool.setuptools.package-data]
kimari = ["py.typed", "defaults/*.json"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q"
